// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaptureCycleSection.js should render the capture cycle section 1`] = `
<section>
  <ul
    className="capture-cycle--components"
  >
    <ComponentTiming
      loadTime={14.2}
      name="componentName"
    />
  </ul>
</section>
`;

exports[`CaptureCycleSection.js should render the capture cycle section with a captureCycleIndex 1`] = `
<section>
  <ul
    className="capture-cycle--components"
  >
    <ComponentTiming
      loadTime={14.2}
      name="componentName"
    />
  </ul>
</section>
`;

exports[`CaptureCycleSection.js should render the capture cycle section with a heading 1`] = `
<section>
  heading
  <ul
    className="capture-cycle--components"
  >
    <ComponentTiming
      loadTime={14.2}
      name="componentName"
    />
  </ul>
</section>
`;
